Bug 1916286: Add rule for MountPointManager in AddDeveloperRepoDirToPolicy. r=yjuglaret

Differential Revision: https://phabricator.services.mozilla.com/D220873